# mteck-resume-parser

./: .gitignore  CONTRIBUTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .gitignore
examples/jane_doe/: certifications.yml  clubs_and_associations.yml  education.yml  experiences.yml  hobbies.yml  personal_info.yml  profiles.yml  projects.yml  research_papers.yml
src/resumodel/: __init__.py  cli.py  exceptions.py  generator.py  loader.py  logging.py  models.py
templates/: resume.tex.j2
tests/: test_cli.py  test_generator.py  test_loader.py  test_logging.py  test_models.py
